Fix horizontal scroll

--- a/_theme/tarantool/_less/documentation/regular-page-layout.less
+++ b/_theme/tarantool/_less/documentation/regular-page-layout.less
@@ -53,7 +53,7 @@
   @media @large-screen {
     // margin: 10px 25px;
     margin-left: 260px;
-    width: calc(~"100%" - 260px);
+    width: calc(~"100%" - 320px);
     // max-width: calc(~"100% - 310px"); // 260px - left menu width, 50px - right_slot's margins
     // height: calc(~"100%" - 20px);
 
@@ -64,7 +64,7 @@
 
   @media @xlarge-screen {
     margin-left: 360px;
-    width: calc(~"100%" - 360px);
+    width: calc(~"100%" - 420px);
     // margin: 10px 25px;
     // max-width: calc(~"100% - 410px"); // 360px - left menu width, 50px - right_slot's margins
 
